--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
     <div class="col-6">
       <div class="card text-center">
         <div class="card-body">
-          <button mat-raised-button color="primary" href="/new-init">NEW INITIATIVE</button>
+          <button mat-raised-button color="primary" (click)="newInit()">
+            <span>NEW INITIATIVE</span>
+          </button>
         </div>
       </div>
     </div>
